deployment/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: operation-borderless-frontend-service
  namespace: operation-borderless
spec:
  selector:
    app: operation-borderless-frontend
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
